--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     width: 1000px;
     top: 0%;
     position: absolute;
-    background-color: rgba(17, 6, 82, 0.815);
+    background-color: #130b32;
     
 }
 .logo{
@@ -16,5 +16,5 @@
 .btnav{
     top: 10%;
     text-align: right;
-    background-color: rgba(17, 6, 82, 0.815);
+    background-color: #130b32;
 }
