--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     background-image: url(./Midia/img1.jpg);    
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
-    background-size: cover; 
+    background-size: cover;
     justify-content: center; 
     align-items: center;
 }
@@ -54,9 +54,14 @@ body{
     height: 100px;
 
 }
-.btnav{
-    top: 10%;
+.Home,.Vender,.Comprar,.filtro{
     background-color: #130b32;
+    border-radius: 5%;
+    box-shadow: 1px 1px 5px purple;
+}
+.Home:hover,.Vender:hover,.Comprar:hover,.filtro:hover{
+    background-color: #130b32;
+    box-shadow: 1px 1px 5px red;
 }
 .fim{
     height: 500px;
@@ -66,27 +71,43 @@ body{
     align-items: center;
 }
 .divf1{
-    height: 125px;
+    height: 400px;
+    border-style: solid;
+    border-color: yellow;
+    border-radius: 5%;
 }
 .uno{
     box-sizing: border-box;
-    
+    border-radius: 5%;
+    padding: 5px;
 }
 .divf2{
-    height: 125px;
+    height: 400px;
+    border-style: solid;
+    border-color: yellow;
+    border-radius: 5%;
 }
 .fusca{
     box-sizing: border-box;
+    border-radius: 5%;
 }
 .divf3{
-    height: 125px;
+    height: 400px;
+    border-style: solid;
+    border-color: yellow;
+    border-radius: 5%;
 }
 .ferrari{
     box-sizing: border-box;
+    border-radius: 5%;
 }
 .divf4{
-    height: 125px;
+    height: 400px;
+    border-style: solid;
+    border-color: yellow;
+    border-radius: 5%;
 }
 .opala{
     box-sizing: border-box;
+    border-radius: 5%;
 }
