--- a/style.css
+++ b/style.css
@@ -66,48 +66,28 @@ body{
 .fim{
     height: 500px;
     display: flex;
+    gap: 10px;
     background-color: #130b32;
     justify-content: space-between;
     align-items: center;
 }
 .divf1{
     height: 400px;
-    border-style: solid;
-    border-color: yellow;
-    border-radius: 5%;
-}
-.uno{
-    box-sizing: border-box;
-    border-radius: 5%;
+    width: 300px;
     padding: 5px;
-}
-.divf2{
-    height: 400px;
     border-style: solid;
     border-color: yellow;
     border-radius: 5%;
-}
-.fusca{
     box-sizing: border-box;
-    border-radius: 5%;
+
 }
-.divf3{
-    height: 400px;
-    border-style: solid;
-    border-color: yellow;
+.fotos_carros{
+    object-fit: cover;
     border-radius: 5%;
-}
-.ferrari{
-    box-sizing: border-box;
-    border-radius: 5%;
-}
-.divf4{
-    height: 400px;
-    border-style: solid;
-    border-color: yellow;
-    border-radius: 5%;
-}
-.opala{
-    box-sizing: border-box;
-    border-radius: 5%;
+    width: 100%;
+    height: 50%;
+}.text{
+    text-align: center;
+    
+    color: white;
 }
