--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
 }
 .Home,.Vender,.Comprar,.filtro{
     background-color: #130b32;
+    
     border-radius: 5%;
     box-shadow: 1px 1px 5px purple;
 }
@@ -63,15 +64,19 @@ body{
     background-color: #130b32;
     box-shadow: 1px 1px 5px red;
 }
-.fim{
-    height: 500px;
+.produtos{
+    height: 1000px;
     display: flex;
-    gap: 10px;
+    /* gap: 70px; */
     background-color: #130b32;
-    justify-content: space-between;
+    justify-content: space-around; 
+    flex-direction: column;
+    gap: 30px;
+    flex-wrap: wrap;
+    align-content: center;
     align-items: center;
 }
-.divf1{
+.divF1{
     height: 400px;
     width: 300px;
     padding: 5px;
@@ -79,15 +84,50 @@ body{
     border-color: yellow;
     border-radius: 5%;
     box-sizing: border-box;
-
+}
+.divf1{
+    height: 49%;
+    width: 100%;
+    gap: 45px;
+    display: flex;
+    padding: 5px;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+}
+.divF1:hover{
+    height: 400px;
+    width: 300px;
+    padding: 5px;
+    border-style: solid;
+    border-color: yellow;
+    box-shadow: 1px 2px 10px yellow;
+    /* transition: 0.5s; */
+    border-radius: 5%;
+    box-sizing: border-box;
 }
 .fotos_carros{
     object-fit: cover;
     border-radius: 5%;
     width: 100%;
     height: 50%;
-}.text{
-    text-align: center;
-    
+}
+.titul{
     color: white;
+}
+.butao{ 
+    width: 90px;
+    border-color: rgba(94, 255, 0, 0.849);
+    border-style: outset;
+    background-color: rgba(94, 255, 0, 0.849);
+    border-radius: 15%;
+}.butao:hover{
+    border-color: rgb(0, 255, 213);
+    transition: 0.5s;
+    box-shadow: 0.5px 1px 5px rgb(0, 255, 213);
+    
+}
+.rodape{
+    background-color: tomato;
+    height: 500px;
 }
