--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0px;
 }
 body{
-    height: 2000px;
+    height: 1000px;
     background-color:  #130b32;
     
 }
@@ -17,6 +17,33 @@ body{
 .logo{
     box-sizing: border-box;
     /* padding: 10px; */
+}
+.Home,.Vender,.Comprar,.filtro{
+    background-color: #130b32;
+    border-radius: 5%;
+    box-shadow: 1px 1px 5px blueviolet;
+}
+button > a {
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+}
+.Home:hover,.Vender:hover,.Comprar:hover,.filtro:hover{
+    background-color: #130b32;
+    box-shadow: 2px 2px 10px purple;
+}
+.entrar{
+    background-color: #130b32;
+    height: 50px;
+    width: 55px;
+    align-self: center;
+    border-radius: 5%;
+    border-style: inset;
+    border-color: cyan;
+    box-shadow: 2px 2px 10px cyan;
+}
+.entrar:hover{
+    box-shadow: 2px 2px 10px blue;
 }
 .meio{
     border-style: solid;
@@ -54,16 +81,7 @@ body{
     height: 100px;
 
 }
-.Home,.Vender,.Comprar,.filtro{
-    background-color: #130b32;
-    
-    border-radius: 5%;
-    box-shadow: 1px 1px 5px purple;
-}
-.Home:hover,.Vender:hover,.Comprar:hover,.filtro:hover{
-    background-color: #130b32;
-    box-shadow: 1px 1px 5px red;
-}
+
 .produtos{
     height: 1000px;
     display: flex;
@@ -88,7 +106,7 @@ body{
 .divf1{
     height: 49%;
     width: 100%;
-    gap: 45px;
+    gap: 2px;
     display: flex;
     padding: 5px;
     text-align: center;
@@ -115,6 +133,10 @@ body{
 .titul{
     color: white;
 }
+.desc{
+    color: white;
+    align-self: start;
+}
 .butao{ 
     width: 90px;
     border-color: rgba(94, 255, 0, 0.849);
@@ -128,6 +150,17 @@ body{
     
 }
 .rodape{
-    background-color: tomato;
-    height: 500px;
+    height: 125px;
+    display:flex;
+    justify-content: space-around;
+    background-color: #130b32;
+    /* padding: 20px; */
+}
+.logof{
+    box-sizing: border-box;
+    
+}
+.textRodape{
+    color: white;
+    align-self: end;
 }
